Fix scrolling for Google Docs on iOS devices, EMBED-143

--- a/src/media/css/osembed.css
+++ b/src/media/css/osembed.css
@@ -89,3 +89,9 @@ body .ose-flickr .flickr-embed-frame {
     max-width: 1024px !important;
     width: 100% !important;
 }
+
+/* Fix scrolling on iOS devices */
+body .ose-google-docs {
+    -webkit-overflow-scrolling: touch;
+    overflow-y: auto;
+}
